--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-location": "~18.0.1",
     "expo-router": "~4.0.7",
     "expo-status-bar": "~2.0.0",
+    "maki": "^2.1.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.2",
